--- a/public/style.css
+++ b/public/style.css
@@ -427,7 +427,7 @@ nav a:hover::after {
   box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
 }
 
-/* RESERVATION SECTION (REDESIGNED) */
+/* RESERVATION SECTION*/
 
 .reservation-section {
   background-color: var(--color-background);
@@ -455,7 +455,6 @@ nav a:hover::after {
   align-items: center;
   gap: 10px;
   transition: all 0.3s ease;
-  text-align: center;
 }
 
 .airbnb-redirect-btn:hover {
@@ -653,8 +652,9 @@ footer p {
     width: 90%;
     max-width: 270px;
     text-align: center;
-    padding: 10px 25px;
+    padding: 15px 25px;
     font-size: 0.9rem;
+    gap: 8px;
   }
   .location-image-wrapper {
     padding-bottom: 75%;
