--- a/public/style.css
+++ b/public/style.css
@@ -433,8 +433,11 @@ nav a:hover::after {
 .reservation-section {
   background-color: var(--color-background);
   text-align: center;
-  color: #ffffff;
   padding: 100px 0;
+}
+
+.reservation-section .section-title {
+  color: #ffffff;
 }
 
 /* Contenedor del botón de Airbnb */
